update the modifications in the folder

--- a/Devasmita's-story.ipynb
+++ b/Devasmita's-story.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "0e635f56",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1baa8e76",
    "metadata": {},
    "outputs": [],
@@ -27,11 +27,11 @@
     "# === CONFIG ===\n",
     "comic_panels = [\n",
     "    {\"image\": \"1. morning-light.jpg\", \"text\": \"Another day, same desk… and yet something about today feels slightly off...\"},\n",
-    "    {\"image\": \"2. opening-light.jpg\", \"text\": \"Every dataset feels like a new landscape — but this one’s… different. Rows missing.. Patterns too neat.. hmmm weird!\"},\n",
+    "    {\"image\": \"2. opening-light.jpg\", \"text\": \"This is weird!!! Generally every dataset feels like a new landscape, but this one’s… different. Rows missing.. Patterns too neat..!\"},\n",
     "    {\"image\": \"3. frown.jpg\", \"text\": \"Okay, who cleans up data this perfectly? Definitely not me before coffee....\"},\n",
     "    {\"image\": \"4. file.jpg\", \"text\": \"One moment I’m buried in dashboards, then out of nowhere, a file blinks on my desktop pops up.\"},\n",
-    "    {\"image\": \"5. Leaning.jpg\", \"text\": \"Tempting!! Probably IT maintenance or could be… a dare??\"},\n",
-    "    {\"image\": \"6. Clicks_open.jpg\", \"text\": \"This is an empty sheet. Except two words: 'Look outside.'\"},\n",
+    "    {\"image\": \"5. Leaning.jpg\", \"text\": \"Probably an IT maintenance or could be… a dare?? Shall I open it?\"},\n",
+    "    {\"image\": \"6. Clicks_open.jpg\", \"text\": \"Okay, this is an empty sheet. Except two words: 'Look outside.'\"},\n",
     "    {\"image\": \"7. Look-outside.jpg\", \"text\": \"Okay, nothing unusual. Just rain and my neighbor’s cat judging me again.\"},\n",
     "    {\"image\": \"8. Turning-back.jpg\", \"text\": \"Except… now the sheet says ‘Look closer.’\"},\n",
     "    {\"image\": \"9. New-tab.jpg\", \"text\": \"There’s a new tab open. I swear it wasn’t there before.\"},\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "dafc3a4c",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "c46df6f3",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "f83e68d4",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "f751297a",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "06d257fe",
    "metadata": {},
    "outputs": [
